fix minor bug with outpost impact